--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,7 @@ services:
       - "9092:9092"
     depends_on:
       - zookeeper
+      - schema_registry
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
@@ -40,7 +41,6 @@ services:
     container_name: schema_registry
     depends_on:
       - zookeeper
-      - kafka
     ports:
       - "8081:8081"
     environment:
