--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,8 +35,12 @@ spring:
     bootstrap-servers: localhost:9092
     consumer:
       properties:
-        schema.registry.url: "localhost:8081"
+        schema.registry.url: "http://localhost:8081"
 
     producer:
       properties:
-        schema.registry.url: "localhost:8081"
+        schema.registry.url: "http://localhost:8081"
+
+    admin:
+      properties:
+        bootstrap.servers: localhost:9092
